--- a/README.html
+++ b/README.html
@@ -45,9 +45,12 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<section id="the-geoepi-lab-landing-page." class="level1">
-<h1>The GeoEpi Lab landing page.</h1>
-<p>Page design from <a href="https://www.quantumjitter.com/">Quantum Jitter</a></p>
+<section id="the-geoepi-research-group-landing-page." class="level1">
+<h1>The GeoEpi Research Group landing page.</h1>
+<section id="geoepi-website" class="level2">
+<h2 class="anchored" data-anchor-id="geoepi-website"><a href="https://geoepi.github.io/">GeoEpi Website</a></h2>
+<p>Page design inspired by <a href="https://www.quantumjitter.com/">Quantum Jitter</a></p>
+</section>
 </section>
 
 </main>
